--- a/content/numerical_error.ipynb
+++ b/content/numerical_error.ipynb
@@ -4,91 +4,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Content with notebooks\n",
+    "# Numerical Errors: Roundoff and Truncation\n",
     "\n",
-    "You can also create content with Jupyter Notebooks. This means that you can include\n",
-    "code blocks and their outputs in your book.\n",
+    "We will consider 2 different types of errors:\n",
     "\n",
-    "## Markdown + notebooks\n",
-    "\n",
-    "As it is markdown, you can embed images, HTML, etc into your posts!\n",
-    "\n",
-    "![](https://myst-parser.readthedocs.io/en/latest/_static/logo.png)\n",
-    "\n",
-    "You an also $add_{math}$ and\n",
-    "\n",
-    "$$\n",
-    "math^{blocks}\n",
-    "$$\n",
-    "\n",
-    "or\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\mbox{mean} la_{tex} \\\\ \\\\\n",
-    "math blocks\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "But make sure you \\$Escape \\$your \\$dollar signs \\$you want to keep!\n",
-    "\n",
-    "## MyST markdown\n",
-    "\n",
-    "MyST markdown works in Jupyter Notebooks as well. For more information about MyST markdown, check\n",
-    "out [the MyST guide in Jupyter Book](https://jupyterbook.org/content/myst.html),\n",
-    "or see [the MyST markdown documentation](https://myst-parser.readthedocs.io/en/latest/).\n",
-    "\n",
-    "## Code blocks and outputs\n",
-    "\n",
-    "Jupyter Book will also embed your code blocks and output in your book.\n",
-    "For example, here's some sample Matplotlib code:"
+    "* **roundoff error**: an error arising from how numbers are represented on computers.\n",
+    "* **truncation error**: an error that arises from approximations we make in turning math operations (like derivatives) into discrete operations that can be done on a computer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import rcParams, cycler\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "plt.ion()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
-    "\n",
-    "N = 10\n",
-    "data = [np.logspace(0, 1, 100) + np.random.randn(100) + ii for ii in range(N)]\n",
-    "data = np.array(data).T\n",
-    "cmap = plt.cm.coolwarm\n",
-    "rcParams['axes.prop_cycle'] = cycler(color=cmap(np.linspace(0, 1, N)))\n",
-    "\n",
-    "\n",
-    "from matplotlib.lines import Line2D\n",
-    "custom_lines = [Line2D([0], [0], color=cmap(0.), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(.5), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(1.), lw=4)]\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "lines = ax.plot(data)\n",
-    "ax.legend(custom_lines, ['Cold', 'Medium', 'Hot']);"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a lot more that you can do with outputs (such as including interactive outputs)\n",
-    "with your book. For more information about this, see [the Jupyter Book documentation](https://jupyterbook.org)"
+    "## Roundoff Error\n",
+    "\n",
+    "Computers use finite amount of memory (64-bits for double precision) to store floating point numbers.  This means that we cannot represent the infinite set of numbers in the number line in a finite amount of memory.  So most numbers are approximate after a certain number of digits."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "Example: 0.1\n",
+    "\n",
+    "As an example, the number `0.1` cannot be exactly represented in floating point\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        0.10000000000000000555\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0.1\n",
+    "print(f\"{a:30.20}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "Exercise: what is (approximately) the smallest number that can be added to `1` such that the result is still distinct from `1`\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reducing roundoff error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Truncation Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relative Importance of Roundoff and Truncation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "Consider a first-order approximation to the derivative:\n",
+    "$$D_h(x) = \\frac{f(x+h) - f(x)}{h}$$\n",
+    "\n",
+    "Consider $f(x) = \\sin(x)$.  Plot the error in the approximation, $D_h(x)$, vs. $h$.  Does it do what you expect?\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other Errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overflow\n",
+    "\n",
+    "The finite amount of memory used for storing numbers means that there is a maximum and minimum possible number representable as well.\n",
+    "\n",
+    "<img src=\"https://imgs.xkcd.com/comics/cant_sleep.png\">\n",
+    "(credit: xkcd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NaN and Inf\n",
+    "\n",
+    "These are defined \"numbers\" that represent floating point errors.  Consider:\n",
+    "\n",
+    "Some NaNs: $\\sqrt{-1}$, $0/0$, ...\n",
+    "\n",
+    "Some infs: $1/0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -107,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
