--- a/content/numerical_error.ipynb
+++ b/content/numerical_error.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "Example: 0.1\n",
+    "**Example:**\n",
     "\n",
     "As an example, the number `0.1` cannot be exactly represented in floating point\n",
     "</div>"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,9 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "Exercise: what is (approximately) the smallest number that can be added to `1` such that the result is still distinct from `1`\n",
+    "**Exercise:**\n",
+    "    \n",
+    "What is (approximately) the smallest number that can be added to `1` such that the result is still distinct from `1`\n",
     "    \n",
     "</div>"
    ]
@@ -113,7 +115,10 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
+    "**Exercise:**\n",
+    "    \n",
     "Consider a first-order approximation to the derivative:\n",
+    "    \n",
     "$$D_h(x) = \\frac{f(x+h) - f(x)}{h}$$\n",
     "\n",
     "Consider $f(x) = \\sin(x)$.  Plot the error in the approximation, $D_h(x)$, vs. $h$.  Does it do what you expect?\n",
@@ -184,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
