--- a/content/01-numerical_error.ipynb
+++ b/content/01-numerical_error.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
     "\n",
     "$$f^\\prime(x) \\approx \\frac{f(x+h) - f(x)}{h} + \\mathcal{O}(h)$$\n",
     "\n",
-    "where $O(h)$ here means that the error in this approximation for the derivative is proportion to $h$.  We say this is *first-order accurate*.  This is an example of truncation error -- the terms we are ignoring are an error in our approximation.\n"
+    "where $\\mathcal{O}(h)$ here means that the error in this approximation for the derivative is proportion to $h$.  We say this is *first-order accurate*.  This is an example of truncation error -- the terms we are ignoring are an error in our approximation.\n"
    ]
   },
   {
@@ -263,6 +263,7 @@
     "The finite amount of memory used for storing numbers means that there is a maximum and minimum possible number representable as well.\n",
     "\n",
     "<img src=\"https://imgs.xkcd.com/comics/cant_sleep.png\">\n",
+    "\n",
     "(credit: xkcd)"
    ]
   },
