--- a/content/02-differentiation.ipynb
+++ b/content/02-differentiation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## First order approximations\n",
     "Consider a set of points labeled with an index $i$, with the physical spacing between them denoted $\\Delta x$.  We can use the result of the Taylor expansion we previously derived to write the derivative as:\n",
     "\n",
     "$$\\left . \\frac{d f}{dx} \\right |_i = \\frac{f_{i+1} - f_i}{\\Delta x} + \\mathcal{O}(\\Delta x)$$\n",
     "\n",
     "where $f_{i+1} = f(x_{i+1})$ is the data we have at the point $i+1$.  \n",
     "\n",
-    "As $\\Delta x \\rightarrow 0$, this approaches the definition of the derivative from calculus.  However, we are not free to choose $\\Delta x$&mdash;it is a property of the discrete set of points we are given."
+    "As $\\Delta x \\rightarrow 0$, this approaches the definition of the derivative from calculus.  However, we are not free to choose $\\Delta x$&mdash;it is a property of the discrete set of points we are given.\n",
+    "\n",
+    "Note: we could alternately have used the point to the right of $i$:\n",
+    "\n",
+    "$$\\left . \\frac{d f}{dx} \\right |_i = \\frac{f_{i} - f_{i-1}}{\\Delta x} + \\mathcal{O}(\\Delta x)$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Second order approximation\n",
+    "\n",
     "Looking at the Taylor expansion of $f_{i+1} = f(x_{i+1}) = f(x_i + \\Delta x)$, we see\n",
     "\n",
     "$$f_{i+1} = f_i + \\Delta x \\left .\\frac{df}{dx} \\right |_i + \\frac{1}{2} \\Delta x^2 \\left . \\frac{d^2f}{dx^2} \\right |_i + \\mathcal{O}(\\Delta x^3)$$\n",
@@ -77,6 +84,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Graphically, these different approximations appear as:\n",
+    "![](derivs.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "**Exercise:**\n",
@@ -89,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
