add some figures + exercises

--- a/content/02-differentiation.ipynb
+++ b/content/02-differentiation.ipynb
@@ -42,7 +42,11 @@
    "metadata": {},
    "source": [
     "## First order approximations\n",
-    "Consider a set of points labeled with an index $i$, with the physical spacing between them denoted $\\Delta x$.  We can use the result of the Taylor expansion we previously derived to write the derivative as:\n",
+    "Consider a set of points labeled with an index $i$, with the physical spacing between them denoted $\\Delta x$.\n",
+    "\n",
+    "![discrete data](fd_grid.png)\n",
+    "\n",
+    "We can use the result of the Taylor expansion we previously derived to write the derivative as:\n",
     "\n",
     "$$\\left . \\frac{d f}{dx} \\right |_i = \\frac{f_{i+1} - f_i}{\\Delta x} + \\mathcal{O}(\\Delta x)$$\n",
     "\n",
@@ -136,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
