some updates after class

--- a/content/02-differentiation.ipynb
+++ b/content/02-differentiation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,8 @@
     "Consider a set of points labeled with an index $i$, with the physical spacing between them denoted $\\Delta x$.\n",
     "\n",
     "![discrete data](fd_grid.png)\n",
+    "\n",
+    "We'll label the function value at $x_i$ as $f_i$, e.g., $f_i = f(x_i)$.\n",
     "\n",
     "We can use the result of the Taylor expansion we previously derived to write the derivative as:\n",
     "\n",
@@ -108,12 +110,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(0, np.pi, 10)\n",
+    "x = np.linspace(0, np.pi, 20, endpoint=False)\n",
     "f = np.sin(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left = 0.6487805672193089, right = 0.5219615580634468, centered = 0.5853710626413778\n",
+      "analytic value = 0.5877852522924731\n"
+     ]
+    }
+   ],
+   "source": [
+    "def left_sided_deriv(x, f, idx):\n",
+    "    \"\"\"return the left-sided derivative at x[idx]\"\"\"\n",
+    "    return (f[idx] - f[idx-1]) / (x[idx] - x[idx-1])\n",
+    "\n",
+    "def right_sided_deriv(x, f, idx):\n",
+    "    \"\"\"return the right-sided derivative at x[idx]\"\"\"\n",
+    "    return (f[idx+1] - f[idx]) / (x[idx+1] - x[idx])\n",
+    "\n",
+    "def centered_deriv(x, f, idx):\n",
+    "    \"\"\"return the left-sided derivative at x[idx]\"\"\"\n",
+    "    return (f[idx+1] - f[idx-1]) / (x[idx+1] - x[idx-1])\n",
+    "\n",
+    "ival = 6\n",
+    "dl = left_sided_deriv(x, f, ival)\n",
+    "dr = right_sided_deriv(x, f, ival)\n",
+    "dc = centered_deriv(x, f, ival)\n",
+    "\n",
+    "print(f\"left = {dl}, right = {dr}, centered = {dc}\")\n",
+    "print(f\"analytic value = {np.cos(x[ival])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.009621078799798233 0.12603833293246652\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 0.5781641734926749\n",
+    "r = 0.4521258405602084\n",
+    "a = 0.5877852522924731\n",
+    "\n",
+    "err_c = np.abs(c - a)\n",
+    "err_r = np.abs(c - r)\n",
+    "print(err_c, err_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0024141896510953 0.06340950457793104\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 0.5853710626413778\n",
+    "r = 0.5219615580634468\n",
+    "a = 0.5877852522924731\n",
+    "\n",
+    "err_c = np.abs(c - a)\n",
+    "err_r = np.abs(c - r)\n",
+    "print(err_c, err_r)"
    ]
   },
   {
