--- a/content/02-differentiation.ipynb
+++ b/content/02-differentiation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,29 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(0, np.pi, 20, endpoint=False)\n",
+    "x = np.linspace(0, np.pi, 10, endpoint=False)\n",
     "f = np.sin(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "left = 0.6487805672193089, right = 0.5219615580634468, centered = 0.5853710626413778\n",
+      "left = 0.7042025064251414, right = 0.4521258405602084, centered = 0.5781641734926749\n",
       "analytic value = 0.5877852522924731\n"
      ]
     }
    ],
    "source": [
+    "# first we'll write functions to evaluate each of the derivative approximations\n",
+    "# at a given index idx\n",
+    "\n",
     "def left_sided_deriv(x, f, idx):\n",
     "    \"\"\"return the left-sided derivative at x[idx]\"\"\"\n",
     "    return (f[idx] - f[idx-1]) / (x[idx] - x[idx-1])\n",
@@ -145,7 +148,9 @@
     "    \"\"\"return the left-sided derivative at x[idx]\"\"\"\n",
     "    return (f[idx+1] - f[idx-1]) / (x[idx+1] - x[idx-1])\n",
     "\n",
-    "ival = 6\n",
+    "# always use x[ival] for the location of the derivative\n",
+    "ival = 3\n",
+    "\n",
     "dl = left_sided_deriv(x, f, ival)\n",
     "dr = right_sided_deriv(x, f, ival)\n",
     "dc = centered_deriv(x, f, ival)\n",
@@ -156,54 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.009621078799798233 0.12603833293246652\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = 0.5781641734926749\n",
-    "r = 0.4521258405602084\n",
-    "a = 0.5877852522924731\n",
-    "\n",
-    "err_c = np.abs(c - a)\n",
-    "err_r = np.abs(c - r)\n",
-    "print(err_c, err_r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0024141896510953 0.06340950457793104\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = 0.5853710626413778\n",
-    "r = 0.5219615580634468\n",
-    "a = 0.5877852522924731\n",
-    "\n",
-    "err_c = np.abs(c - a)\n",
-    "err_r = np.abs(c - r)\n",
-    "print(err_c, err_r)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": []
   }
@@ -224,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
