split up the ODE notebook

--- a/content/02-exercises.ipynb
+++ b/content/02-exercises.ipynb
@@ -55,7 +55,9 @@
     "\n",
     "With this change of variables, we map $x \\in [0, \\infty)$ to $z \\in [0, 1]$.\n",
     "\n",
-    "Reexpress the integral in terms of $z$ and do the numerical integration.  Compare to the true value of $\\Gamma(a)$ for a few values of $a$."
+    "Reexpress the integral in terms of $z$ and do the numerical integration.  Compare to the true value of $\\Gamma(a)$ for a few values of $a$.\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
