--- a/content/04-ODEs/04-ODEs-partII.ipynb
+++ b/content/04-ODEs/04-ODEs-partII.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -11,6 +15,20 @@
     "import matplotlib as mpl\n",
     "mpl.rcParams['figure.dpi'] = 100\n",
     "mpl.rcParams['figure.figsize'] = (10, 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Higher-order Accurate ODE Integration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll continue to work on the orbit problem, so let's define our RHS and the `OrbitHistory` class that we used previously."
    ]
   },
   {
@@ -129,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
