--- a/content/02-diff-int/02-integration.ipynb
+++ b/content/02-diff-int/02-integration.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -371,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
