--- a/content/04-ODEs/04-ODEs-partI.ipynb
+++ b/content/04-ODEs/04-ODEs-partI.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -17,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ODEs"
+    "# Basic Methods for ODEs"
    ]
   },
   {
@@ -366,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
