first pass at roots

--- a/content/03-roots/03-root-finding.ipynb
+++ b/content/03-roots/03-root-finding.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5403278f70>]"
+       "[<matplotlib.lines.Line2D at 0x7ffb96e8ddc0>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +218,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can call it by giving it a range and the function we wish to zero"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,33 +235,72 @@
        "-2.0188431814312935"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bisect(-3, -1, f)"
+    "x0 = bisect(-3, -1, f)\n",
+    "x0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Did we get it right?  We can evaluate $f(x)$ at $x_0$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.0185546875"
+       "5.515989442983482e-09"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bisect(-3, -1, f, tol=1.e-3)"
+    "f(x0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's pretty close to 0!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bisection convergece slowly&mdash;each iteration cuts the interval in half, so a lot of iterations may be needed to find the zero to the accuracy you want."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Exercise:**\n",
+    "\n",
+    "Consider the function \n",
+    "\n",
+    "$$f(x) = x^2$$\n",
+    "\n",
+    "What happens when you try to use bisection on this? why?\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
@@ -262,6 +308,104 @@
    "metadata": {},
    "source": [
     "## Newton-Raphson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Newton-Raphson approach will often converge faster than bisection.  Instead of starting with a bracket containing the root, you start with an initial guess for the root, $x_0$.  We can then Taylor-expand around our guess:\n",
+    "\n",
+    "$$f(x_0 + \\delta x) = f(x_0) + f^\\prime(x_0) \\delta x + \\mathcal{O}(\\delta x^2)$$\n",
+    "\n",
+    "Here, $\\delta x$ is the correction to $x_0$ that gives us our root, i.e., $f(x_0 + \\delta x) = 0$.\n",
+    "\n",
+    "If our initial guess is good, then $\\delta x$ is small, and we can neglect the higher-order terms in the expansion, and we have:\n",
+    "\n",
+    "$$f(x_0 + \\delta x) \\approx f(x_0) + f^\\prime(x_0) \\delta x = 0$$\n",
+    "\n",
+    "Solving for our correction, we have:\n",
+    "\n",
+    "$$\\delta x = -\\frac{f(x_0)}{f^\\prime(x_0)}$$\n",
+    "\n",
+    "We can correct our initial guess: $x_0 \\rightarrow x_0 + \\delta x$ and repeat the process until $|\\delta x| \\ll |x_0|$.\n",
+    "\n",
+    "One complication compared with bisection is that we need the derivative, $f^\\prime(x)$ now.  Usually we'll want to provide the analytic derivative (but if needed, we could do a difference approximation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Provide the derivative of our function above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fprime(x):\n",
+    "    return 1.5*x**2 - np.pi/3.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newton(x0, func, funcprime, tol=1.e-8):\n",
+    "    \"\"\"find the root of func(x) using Newton's method, taking\n",
+    "    x0 as an initial guess\"\"\"\n",
+    "    \n",
+    "    err = 1.e10\n",
+    "    \n",
+    "    while err > tol:\n",
+    "        dx = -func(x0) / funcprime(x0)\n",
+    "        x0 += dx\n",
+    "        err = np.abs(dx) / np.abs(x0)\n",
+    "        \n",
+    "    return x0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.018843182520034"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0 = 3\n",
+    "newton(x0, f, fprime)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**Exercise:**\n",
+    "\n",
+    "Following up on the previous exercise.  Try finding the root of \n",
+    "    \n",
+    "$$f(x) = x^2$$\n",
+    "    \n",
+    "using Newton's method.  How many iterations are needed to reach your error?\n",
+    "    \n",
+    "</div>"
    ]
   },
   {
