--- a/content/04-ODEs/04-exercises.ipynb
+++ b/content/04-ODEs/04-exercises.ipynb
@@ -35,7 +35,27 @@
     "\n",
     "**2. Chaos**\n",
     "\n",
-    "A double pendulum system is nonlinear and can exhibit chaotic behavior&mdash;the solution at some time in the future depends sensitively on the initial conditions.\n",
+    "The equations of motion for a double pendulum consisting of two equal length rigid rods are:\n",
+    "    \n",
+    "\\begin{eqnarray}\n",
+    "    \\dot{\\theta}_1 &=& \\frac{6}{I} \\frac{2 {p_\\theta}_1 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_2}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)} \\\\\n",
+    "    \\dot{\\theta}_2 &=& \\frac{6}{I} \\frac{2 {p_\\theta}_2 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_1}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)} \\\\\n",
+    "    {\\dot{p}_\\theta}_1 &=& -\\frac{1}{2} I \\left (\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) + 3 \\frac{g}{l} \\sin \\theta_1 \\right ) \\\\\n",
+    "    {\\dot{p}_\\theta}_2 &=& -\\frac{1}{2} I \\left (-\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) +  \\frac{g}{l} \\sin \\theta_2 \\right )\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "where $I = m l^2$ is the moment of inertia, $\\theta_1$ and $\\theta_2$ are\n",
+    "the angles of the two rods with respect to the vertical and ${p_\\theta}_1$\n",
+    "    and ${p_\\theta}_2$ are generalized momenta.  See the [wikipedia page on double pendulum](https://en.wikipedia.org/wiki/Double_pendulum) for a derivation.\n",
+    "\n",
+    "Write a routine to integrate this system using RK4, given initial angles\n",
+    "$\\theta_1$ and $\\theta_2$ (take the initial momenta to be 0).\n",
+    "    \n",
+    "    \n",
+    "A double pendulum system is nonlinear and can exhibit chaotic behavior&mdash;the solution at some time in the future depends sensitively on the initial conditions.  Make a plot of the solution you get ($\\theta_1$ and $\\theta_2$ vs. time) with two very closely spaced sets of initial conditions.  What happens to the evolution?\n",
+    "    \n",
+    "\n",
+    "    \n",
     "    \n",
     "</div>"
    ]
@@ -64,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
