--- a/content/04-ODEs/04-exercises.ipynb
+++ b/content/04-ODEs/04-exercises.ipynb
@@ -15,8 +15,19 @@
     "\n",
     "**1. Euler-Cromer**\n",
     "\n",
-    "A simple change to the first-order Euler method is to update the position first and then use the new position to evalue the acceleration before updating the velocity.  In this sense, we are treating the velocity update implicitly.\n",
+    "A simple change to the first-order Euler method is to update the position first and then use the new position to evalue the acceleration before updating the velocity:\n",
+    "\n",
+    "$${\\bf r}^{n+1} = {\\bf r}^n + \\tau \\, {\\bf v}^n$$\n",
+    "\n",
+    "$${\\bf v}^{n+1} = {\\bf v}^n + \\tau \\, {\\bf a}({\\bf r}^{n+1})$$\n",
     "    \n",
+    "This is called the *Euler-Cromer* method.  We can do this for\n",
+    "our system since the acceleration is a function of position only,\n",
+    "not velocity.\n",
+    "    \n",
+    "In this sense, we are treating the velocity update implicitly.\n",
+    "\n",
+    "Integrate the orbit problem with Euler-Cromer and compare to the standard Euler method.  Why do you think the solutions look so different if they are both first-order?\n",
     "</div>"
    ]
   },
@@ -37,12 +48,14 @@
     "\n",
     "The equations of motion for a double pendulum consisting of two equal length rigid rods are:\n",
     "    \n",
-    "\\begin{eqnarray}\n",
-    "    \\dot{\\theta}_1 &=& \\frac{6}{I} \\frac{2 {p_\\theta}_1 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_2}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)} \\\\\n",
-    "    \\dot{\\theta}_2 &=& \\frac{6}{I} \\frac{2 {p_\\theta}_2 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_1}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)} \\\\\n",
-    "    {\\dot{p}_\\theta}_1 &=& -\\frac{1}{2} I \\left (\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) + 3 \\frac{g}{l} \\sin \\theta_1 \\right ) \\\\\n",
-    "    {\\dot{p}_\\theta}_2 &=& -\\frac{1}{2} I \\left (-\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) +  \\frac{g}{l} \\sin \\theta_2 \\right )\n",
-    "\\end{eqnarray}\n",
+    "$$\\dot{\\theta}_1 = \\frac{6}{I} \\frac{2 {p_\\theta}_1 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_2}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)}$$\n",
+    "    \n",
+    "$$\\dot{\\theta}_2 = \\frac{6}{I} \\frac{2 {p_\\theta}_2 - 3 \\cos(\\theta_1 - \\theta_2) {p_\\theta}_1}{16 - 9 \\cos^2 (\\theta_1 - \\theta_2)}$$\n",
+    "    \n",
+    "$${\\dot{p}_\\theta}_1 = -\\frac{1}{2} I \\left (\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) + 3 \\frac{g}{l} \\sin \\theta_1 \\right )$$\n",
+    "    \n",
+    "$${\\dot{p}_\\theta}_2 = -\\frac{1}{2} I \\left (-\\dot{\\theta}_1\\dot{\\theta}_2 \\sin(\\theta_1 - \\theta_2) +  \\frac{g}{l} \\sin \\theta_2 \\right )$$\n",
+    "    \n",
     "\n",
     "where $I = m l^2$ is the moment of inertia, $\\theta_1$ and $\\theta_2$ are\n",
     "the angles of the two rods with respect to the vertical and ${p_\\theta}_1$\n",
