--- a/content/04-ODEs/04-ODEs-partI.ipynb
+++ b/content/04-ODEs/04-ODEs-partI.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "$$\\dot{\\bf v} = -\\frac{GM_\\star {\\bf r}}{r^3}$$\n",
     "\n",
-    "where ${\\bf x} = (x, y)$ and ${\\bf v} = (v_x, v_y)$ "
+    "where ${\\bf r} = (x, y)$ and ${\\bf v} = (v_x, v_y)$ "
    ]
   },
   {
@@ -80,7 +80,7 @@
     "\n",
     "![Euler's method](rk2_Euler.png)\n",
     "\n",
-    "We find the slope at $t^n$ and follow it forward for the full $\\Delta t$ to $t^{n+1}$."
+    "We find the slope at $t^n$ and follow it forward for the full $\\tau$ to $t^{n+1}$."
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "Text(0, 0.5, 'y [AU]')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -352,6 +352,58 @@
     "\n",
     "There are likely many more.  Unlike the integrals we did previously, where the natural error to compute was the difference between the numerical integral and the analytic one, here there is not a single obvious metric.  So we should pick one or more and look for convergence.  Depending on what our goal is, one metric might be more meaningful than another."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def error(history):\n",
+    "    \n",
+    "    # define the error to be displacement at t = 0 and t = T\n",
+    "    # e = sqrt{(x - x0)**2 + (y - y0)**2}\n",
+    "    #e = np.sqrt((history.x[-1] - history.x[0])**2 + (history.y[-1] - history.y[0])**2)\n",
+    "    \n",
+    "    # define the error to be distance from (0, 0) at end compared to start\n",
+    "    R_orig = np.sqrt(history.x[0]**2 + history.y[0]**2)\n",
+    "    R_new = np.sqrt(history.x[-1]**2 + history.y[-1]**2)\n",
+    "    e = np.abs(R_new - R_orig)\n",
+    "    \n",
+    "    return e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.186923100574993\n",
+      "2.63132561836189\n",
+      "1.579518716431993\n",
+      "0.8788126438377246\n",
+      "0.45891625361582156\n"
+     ]
+    }
+   ],
+   "source": [
+    "taus = [0.1, 0.05, 0.025, 0.0125, 0.00625]\n",
+    "\n",
+    "for tau in taus:\n",
+    "    orbit = euler_orbit(Y0, tau, 1)\n",
+    "    print(error(orbit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
