--- a/content/04-ODEs/04-ODEs-partI.ipynb
+++ b/content/04-ODEs/04-ODEs-partI.ipynb
@@ -354,16 +354,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define an error function based on metric 1 above"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error(history):\n",
-    "    \n",
-    "    # define the error to be displacement at t = 0 and t = T\n",
-    "    # e = sqrt{(x - x0)**2 + (y - y0)**2}\n",
-    "    #e = np.sqrt((history.x[-1] - history.x[0])**2 + (history.y[-1] - history.y[0])**2)\n",
     "    \n",
     "    # define the error to be distance from (0, 0) at end compared to start\n",
     "    R_orig = np.sqrt(history.x[0]**2 + history.y[0]**2)\n",
@@ -374,8 +377,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's integrate a bunch of orbits, reducing $\\tau$ by 2 each time.  Since this is first order accurate, the error should decrease by a factor of 2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -396,6 +406,13 @@
     "for tau in taus:\n",
     "    orbit = euler_orbit(Y0, tau, 1)\n",
     "    print(error(orbit))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the decrease in the error is essentially 2.  It is certainly not better than first-order accurate."
    ]
   },
   {
