add an exercise

--- a/content/04-ODEs/04-exercises.ipynb
+++ b/content/04-ODEs/04-exercises.ipynb
@@ -44,7 +44,31 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "**2. Chaos**\n",
+    "**2. Energy conservation**\n",
+    "\n",
+    "We can define the total energy / mass of our orbit system as:\n",
+    "    \n",
+    "$$\\mathcal{E} = \\frac{1}{2} |{\\bf v}|^2 - \\frac{GM_\\star}{r}$$\n",
+    "    \n",
+    "since the mass of our planet does not change, this is conserved.  Plot $\\mathcal{E}$ vs. time for the orbit for the different methods we looked at (including Euler-Cromer, from above).  How well do they conserve energy?\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "\n",
+    "**3. Chaos**\n",
     "\n",
     "The equations of motion for a double pendulum consisting of two equal length rigid rods are:\n",
     "    \n",
